--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@types/qs": "^6.9.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.5.2",
     "sass": "^1.72.0",
     "stylelint": "^16.3.0",
     "stylelint-config-standard": "^36.0.0",
