--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "safari 14"
   ],
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.2",
     "@svgr/webpack": "^8.1.0",
     "next": "14.1.4",
@@ -24,12 +25,16 @@
     "qs": "^6.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "react-imask": "^7.5.0",
     "react-redux": "^9.1.0",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.1.4",
     "@types/node": "^20",
     "@types/qs": "^6.9.14",
     "@types/react": "^18",
